# garnish-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
common/: Cargo.toml
common/src/: byte_vec.rs  error.rs  lib.rs  result.rs  utils.rs
common/src/value/: display.rs  mod.rs  to_owned.rs  value.rs  value_ref.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  build.rs  classify.rs  error.rs  lexer.rs  lib.rs  make_instructions.rs  parser.rs
compiler/src/building/: mod.rs
compiler/src/lex/: lexer.rs
compiler/src/lexing/: error.rs  lexer.rs  mod.rs
compiler/src/parse/: parser.rs
compiler/src/parsing/: error.rs  mod.rs  parser.rs
compiler/tests/: compile.rs
compiler/tests/resources/: simple_list
data/: Cargo.toml
data/src/: clone.rs  error.rs  instruction.rs  lib.rs  optimize.rs  runtime.rs  simple.rs
data/src/basic/: basic.rs  clone.rs  companion.rs  data.rs  dump.rs  garnish.rs  internal.rs  merge_to_symbol_list.rs  mod.rs  object.rs  optimize.rs  ordering.rs  search.rs  storage.rs
data/src/basic/garnish/: conversions.rs  factory.rs  garnish_impl.rs  mod.rs  utils.rs
data/src/basic/garnish/conversions/: bytes.rs  mod.rs  number.rs  string.rs  symbol.rs
data/src/basic/object/: builder_macro.rs  mod.rs
data/src/data/: display.rs  iterators.rs  mod.rs  number.rs  parsing.rs  stack_frame.rs
docs/: book.toml
docs/src/: SUMMARY.md  escape_sequences.md  intro.md  precedence.md  reference.md  tasks.md
docs/src/reference_pages/: input_results.md  operations.md  partial_application.md  precedence.md  types.md
expr_lang_common/: Cargo.toml
expr_lang_common/src/: data_type.rs  error.rs  instructions.rs  sizes.rs
expr_lang_common/src/value/: range.rs  value_ref.rs
expr_lang_instruction_set_builder/: Cargo.toml
expr_lang_instruction_set_builder/src/: lib.rs
expr_lang_runtime/: Cargo.toml
expr_lang_runtime/src/: access.rs  apply.rs  bitwise.rs  cast.rs  comparison.rs  conditional.rs  context.rs  execute.rs  input.rs  instruction_iter.rs  invoke.rs  iterate.rs  link.rs  lists.rs  logical.rs  math.rs  pair.rs  put.rs  range.rs  resolve.rs  result.rs  runtime.rs  utils.rs
garnish/: Cargo.toml
garnish/src/: lib.rs
instruction_set_builder/: Cargo.toml
instruction_set_builder/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: access.rs  apply.rs  bitwise.rs  cast.rs  comparison.rs  conditional.rs  context.rs  execute.rs  expression_data.rs  input.rs  instruction.rs  instruction_iter.rs  invoke.rs  iterate.rs  lib.rs  link.rs  lists.rs  logical.rs  math.rs  pair.rs  put.rs  range.rs  resolve.rs  result.rs  runtime.rs  simple.rs  utils.rs
runtime/src/runtime/: access.rs  apply.rs  arithmetic.rs  bitwise.rs  casting.rs  comparison.rs  comparisons.rs  concat.rs  conditionals.rs  context.rs  data.rs  equality.rs  error.rs  instruction.rs  internals.rs  jumps.rs  link.rs  list.rs  logical.rs  mod.rs  pair.rs  partial.rs  put.rs  range.rs  resolve.rs  result.rs  runtime_data.rs  runtime_impls.rs  sideeffect.rs  types.rs  utilities.rs
runtime/src/simple/: error.rs  expression_data.rs  mod.rs  runtime.rs
runtime/src/simple/data/: enum_data.rs  mod.rs  number.rs  parsing.rs  types.rs  utilities.rs
runtime/tests/: full_executions.rs
simple/: Cargo.toml
simple/src/: lib.rs
test-processing/: Cargo.toml
test-processing/src/: lib.rs
tests/: Cargo.toml
tests/integration/: arithmetic.ish  files_size.ish  lists.ish
tests/scripts/access/: apply.garnish  symbol_list.garnish
tests/scripts/access/symbol_list/: number.garnish
tests/scripts/apply/list/: symbol_list.garnish
tests/scripts/apply/symbol_list/: number.garnish  symbol.garnish  symbol_list.garnish
tests/scripts/casting/: symbol_list.garnish
tests/scripts/equality/: bytelist_bytelist.garnish  bytelist_slice.garnish  charlist_charlist.garnish  charlist_slice.garnish  concatenation_concatenation.garnish  concatenation_slice.garnish  list_list.garnish  list_slice.garnish  slice_bytelist.garnish  slice_charlist.garnish  slice_concatenation.garnish  slice_list.garnish  slice_slice.garnish  slice_symbol_list.garnish  symbol_list.garnish  symbol_list_slice.garnish
tests/scripts/equality/list/: numbers.garnish  symbol_list.garnish
tests/scripts/math/: absolute_value.garnish  addition.garnish  division.garnish  integer_division.garnish  multiplication.garnish  opposite.garnish  remainder.garnish  subtraction.garnish
tests/scripts/pair/: precedence.garnish
tests/scripts/partial/: partial_with_extra_arg.garnish  partial_with_list.garnish
tests/scripts/reapply/: if_true_reapply.garnish
tests/scripts/scenario/: jumping_wrong_index.garnish
tests/src/: context.rs  derive.rs  garnish_data_wrapper.rs  main.rs  test_annotation.rs
tests/src/test_annotation/: execution.rs  extraction.rs  mod.rs
tests/tests/: basic.rs  mod.rs  runtime_impls.rs
tests/tests/simple/: access.rs  apply.rs  arithmetic.rs  bitwise.rs  casting.rs  clone.rs  comparison.rs  concat.rs  equality.rs  jumps.rs  link.rs  list.rs  logical.rs  mod.rs  pair.rs  put.rs  range.rs  resolve.rs  sideeffect.rs
traits/: Cargo.toml
traits/src/: context.rs  data.rs  error.rs  helpers.rs  instructions.rs  lib.rs  runtime.rs
traits/src/helpers/: clone.rs  concatenation.rs  mod.rs
traits_derive/: Cargo.toml
traits_derive/src/: data_wrapper.rs  lib.rs
