# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "runtime",
    "compiler",
    "traits",
    "data",
    "tests",
]

[workspace.package]
version = "0.0.2-alpha"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2021"
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://github.com/garnish-lang/garnish-core"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "./LICENSE"
readme = "./README.md"