[workspace]
resolver = "2"
members = [
    "runtime",
    "compiler",
    "traits",
    "data",
    "tests",
    "garnish",
    "traits_derive",
]

[workspace.package]
description = "Data implementation for garnish runtimes using simple list of variants"
version = "0.0.25-alpha"
authors = ["Chad Collins <chadrcollin91@gmail.com>"]
edition = "2024"
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://docs.rs/garnish_lang_simple_data/latest/garnish_lang_simple_data/"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "LICENSE"
readme = "README.md"

[workspace.dependencies]
garnish_lang_traits = { version = "0.0.25-alpha",  path = "traits" }
garnish_lang_traits_derive = { version = "0.0.25-alpha",  path = "traits_derive" }
garnish_lang_simple_data = { version = "0.0.25-alpha",  path = "data" }
garnish_lang_compiler = { version = "0.0.25-alpha",  path = "compiler" }
garnish_lang_runtime = { version = "0.0.25-alpha",  path = "runtime" }
