[package]
name = "garnish_lang_common"
version = "0.1.0"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2018"
description = "Common library for core Garnish Lang packages."
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://github.com/garnish-lang/garnish-core"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
unicode-segmentation = "1.3.0"
