[package]
name = "garnish_lang_compiler"
version = "0.0.2-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
garnish_lang_traits = { version = "0.0.2-alpha",  path = "../traits" }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[dev-dependencies]
garnish_lang_simple_data = { version = "0.0.2-alpha", path = "../data" }

[features]
serde = ["dep:serde"]