[package]
name = "garnish_lang_compiler"
description = "Utilites to compile garnish scripts."
version = "0.0.11-alpha"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2021"
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://docs.rs/garnish_lang_compiler/latest/garnish_lang_compiler/"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
garnish_lang_traits = { version = "0.0.11-alpha",  path = "../traits" }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[dev-dependencies]
garnish_lang_simple_data = { version = "0.0.11-alpha", path = "../data" }

[features]
serde = ["dep:serde"]