[package]
name = "garnish_lang_compiler"
description = "Utilites to compile garnish scripts."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
garnish_lang_traits = { workspace = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[dev-dependencies]
garnish_lang_simple_data = { workspace = true }

[features]
serde = ["dep:serde"]