[package]
name = "garnish_lang_simple_data"
description = "Data implementation for garnish runtimes using simple list of variants"
version = "0.0.21-alpha"
authors = ["Chad Collins <chadrcollin91@gmail.com>"]
edition = "2024"
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://docs.rs/garnish_lang_simple_data/latest/garnish_lang_simple_data/"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garnish_lang_traits = { version = "0.0.21-alpha", path = "../traits" }
serde = { version = "1.0.196", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]