[package]
name = "expr_lang_instruction_set_builder"
version = "0.1.0"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expr_lang_common = { path = "../expr_lang_common" }
