[package]
name = "garnish_lang_docs"
description = "Single library for re-exporting and documenting all Garnish core libraries."
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garnish_lang_traits = { workspace = true }
garnish_lang_simple_data = { workspace = true }
garnish_lang_compiler = { workspace = true }
garnish_lang_runtime = { workspace = true }

[features]
serde = ["garnish_lang_traits/serde", "garnish_lang_simple_data/serde", "garnish_lang_compiler/serde", "garnish_lang_runtime/serde"]
