[package]
name = "garnish_lang_instruction_set_builder"
version = "0.0.1-alpha"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2018"
description = "Simple implementation of an instruction set builder for Garnish Lang."
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://github.com/garnish-lang/garnish-core"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garnish_lang_common = "0.0.1-alpha"
