[package]
name = "garnish_lang_runtime"
description = "Runtime and execution library for Garnish Lang."
version = "0.0.17-alpha"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2024"
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://docs.rs/garnish_lang_runtime/latest/garnish_lang_runtime/"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
garnish_lang_traits = { version = "0.0.17-alpha", path = "../traits" }
serde = { version = "1.0.196", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]