[package]
name = "garnish_lang_runtime"
description = "Runtime and execution library for Garnish Lang."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
garnish_lang_traits = { version = "0.0.23-alpha", path = "../traits" }
serde = { version = "1.0.196", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]