[package]
name = "garnish_lang_tests"
version = "0.0.1-alpha"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2024"
description = "Integrations test suite for garnish lang core libraries."
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://github.com/garnish-lang/garnish-core"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "../LICENSE"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
colored = "2.0.0"

garnish_lang_runtime = { path = "../runtime"}
garnish_lang_compiler = { path = "../compiler"}
garnish_lang_simple_data = { path = "../data" }
garnish_lang_traits = { path = "../traits" }