[package]
name = "garnish_lang_tests"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.7"
colored = "3.0.0"

garnish_lang_runtime = { path = "../runtime"}
garnish_lang_compiler = { path = "../compiler"}
garnish_lang_simple_data = { path = "../data" }
garnish_lang_traits = { path = "../traits" }