[package]
name = "garnish_lang_traits"
description = "Shared traits for garnish core libraries."
version = "0.0.4-alpha"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2021"
homepage = "https://github.com/garnish-lang/garnish-core"
documentation = "https://docs.rs/garnish_lang_traits/latest/garnish_lang/_traits"
repository = "https://github.com/garnish-lang/garnish-core"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]
