[package]
name = "garnish_lang_traits_derive"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["full", "parsing"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
garnish_lang_traits = { workspace = true }

[features]
garnish_facade = []